mysql tests working

--- a/mysql/tests/compose/mysql.conf
+++ b/mysql/tests/compose/mysql.conf
@@ -7,6 +7,7 @@ slow_query_log = on
 slow_query_log_file = /var/log/mysql/mysql_slow.log
 long_query_time = 0.1  # Facilitates local slow query log testing.
 # log_short_format=ON  # Uncomment to simulate short log format.
+performance_schema_max_sql_text_length = 4096
 
 [mysqld-8.0]
 general_log_file = /opt/bitnami/mysql/logs/mysql.log
