--- a/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
+++ b/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
@@ -12,6 +12,7 @@ clickhouse-driver==0.1.2
 contextlib2==0.6.0; python_version < "3.0"
 cryptography==3.2.1
 cx-oracle==7.2.0
+datadog==0.37.1
 ddtrace==0.32.2
 dnspython==1.16.0
 enum34==1.1.6; python_version < "3.0"
