Add config spec data model consumer

--- a/disk/assets/configuration/spec.yaml
+++ b/disk/assets/configuration/spec.yaml
@@ -254,3 +254,4 @@ files:
                   type: string
                 - name: type
                   type: string
+                additionalProperties: true
